Fixed spacing on Table title

--- a/react/src/css/Table.css
+++ b/react/src/css/Table.css
@@ -2,3 +2,8 @@
     padding-left: 5%;
     padding-right: 5%;
 }
+
+#title {
+    margin-top: 0.5em;
+    margin-bottom: 0.25em;
+}
